tests/lean/user_attribute.lean.expected.out
eq.refl
@[foo, refl]
constructor eq.refl : ∀ {α : Sort u} (a : α), a = a
[eq.refl]
---
eq.refl
@[foo, foo.baz, refl]
constructor eq.refl : ∀ {α : Sort u} (a : α), a = a
[eq.refl]
user_attribute.lean:24:0: error: an attribute named [reducible] has already been registered
state:
⊢ true
user_attribute.lean:29:0: error: invalid attribute.register argument, must be name of a definition of type user_attribute
state:
⊢ true
user_attribute.lean:35:2: error: invalid attribute.register argument, must be name of a definition of type user_attribute
state:
⊢ true
